--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,14 @@
 
 plugins {
     id 'project2.java-application-conventions'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 dependencies {
     implementation 'org.apache.commons:commons-text'
     implementation project(':lib')
     implementation project(':data')
+    implementation project(':ui')
 }
 
 application {
@@ -19,4 +21,10 @@ application {
 
 run {
     standardInput = System.in
+}
+
+javafx {
+    // version = "21"
+    version = "17.0.8"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
