--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ run {
 javafx {
     // version = "21"
     version = "17.0.8"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
 }
 
 task('cli-app', dependsOn: 'classes', type: JavaExec) {
