Create app menu & options
Prune dead code

Fix output of menu

Update showPlantDetails

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>plant-management-system</name>
+	<name>plant-management-system-project2</name>
 	<comment>Project project2 created by Buildship.</comment>
 	<projects>
 	</projects>
