--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'plant.App'
+    mainClass = 'app.App'
 }
 
 run {
