Complete plant form
Fix enum labels needing to be uppercase

Fix bug where correct conversions were being ignored

The conditional for promptChoiceUnchecked was incorrect. This has been
fixed.

Implement FromString

Implement fromString on all enum types

Update UI to use fromString

Create enumToLabels

Complete plant form

Use ObjectProperty to share data between widgets

Prune code

Create components submodule

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,8 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'app.ConsoleApp'
+    // mainClass = 'app.ConsoleApp'
+    mainClass = 'app.GUIApp'
 }
 
 run {
